2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #12343: Installer - Missing message when creation of admin user fails due to missing data (Thanks to Marcus Krause)
	* Fixed #13423: Bug/Feature: Make ext_tables.sql syntax parsing more compliable (Thanks to Joachim Mathes)
	* Fixed #13201: Repots module - Use same install tool check for reports as used in About module (Thanks to Moreno Feltscher)

2010-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13580: htmlArea RTE: Extjize the RTE

2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #13574: html warning, because a plain & inside an url (Thanks to Stefan Galinski)
	* Fixed #12180: Speedup t3lib_BEfunc::getRecordPath by using rootline cache (Thanks to Steffen Gebert)
	* Fixed #13593: Remove calls to and log usage of deprecated global function fw() (Thanks to Steffen Gebert)
	* Fixed #12625: JSMENU's fallback menu name is not unique
	* Fixed #12259: Use labels in the page wizard for the page title fields (Thanks to Georg Ringer)
	* Fixed #11206: Cleaned up test "t3lib_extmgm_testcase" (Thanks to Oliver Klee)
	* Fixed #11608: t3lib_beFunc::viewOnClick - Extract logic to find the right frontend domain (Thanks to Michael Klapper)
	* Fixed #12201: Replace header(Location:) with t3lib_div::redirect() (Thanks to Steffen Gebert)

2010-02-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12220: String literals quoted as identifiers

2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #7501: Remove Static-Templates from standard installation (Update class was declared twice, thanks to Susanne Moog)

2010-02-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13568: ExtDirect - API generator should built absolute links (Thanks to Stefan Galinski)
	* Fixed bug #13333: Datepicker button color is wrong

2010-02-20  Benjamin Mack  <benni@typo3.org>

	* Fixed #7501: Remove Static-Templates from standard installation (Thanks to Steffen Ritter)
